# rtype-engine

./: README.md
EngineLib/: EngineLib.sln
EngineLib/EngineLib/: Application.cpp  Application.h  BitArray.h  CMakeLists.txt  ClassDiagram.cd  Client.cpp  Client.hpp  Collider.cpp  Collider.h  Engine.h  EngineLib.vcxproj  EngineLib.vcxproj.filters  EventNetwork.cpp  EventNetwork.h  GameManager.cpp  GameManager.h  GameObject.cpp  GameObject.h  IComponent.cpp  IComponent.h  RessourceManager.cpp  RessourceManager.h  Room.cpp  Room.hpp  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  Script.h  SoundManager.cpp  SoundManager.h  SpriteRenderer.cpp  SpriteRenderer.h  TextRenderer.cpp  TextRenderer.h  TransformObject.cpp  TransformObject.h  main.cpp
EngineLib/Testmylib/: ClassDiagram.cd  Header.h  SBullet.cpp  SBullet.h  SGround.cpp  SGround.h  SLevel.cpp  SLevel.h  SMob.cpp  SMob.h  SPlayer.cpp  SPlayer.h  SScroll.cpp  SScroll.h  Testmylib.cpp  Testmylib.vcxproj  Testmylib.vcxproj.filters
EngineLib/Testmylib/Prefab/: Bullet1.prefab  Ground1.prefab  Ground2.prefab  Mob.prefab  Player1.prefab  Player2.prefab  Player3.prefab  Player4.prefab
EngineLib/Testmylib/Scene/: test.scene
EngineLib/testcpp/: stdafx.cpp  testcpp.cpp  testcpp.vcxproj  testcpp.vcxproj.filters
client/: Animation.cpp  CMakeLists.txt  Game.cpp  Game.hh  Interface.cpp  Interface.hh  Menu.hh  Room.hh  cmd.sh  main.cpp  rtype_client_test.sln  rtype_client_test.vcxproj  rtype_client_test.vcxproj.filters
doc/: rfc_rtype.nroff  rfc_rtype.txt
network/: CMakeLists.txt  INetwork.hpp  NetworkManager.cpp  WNetwork.hpp  server.cpp
server/: CMakeLists.txt  main.cpp
sfml_client_final/sfml_client_final/: sfml_client_final.sln
sfml_client_final/sfml_client_final/sfml_client_final/: Animation.hh  Game.cpp  Game.hh  GameStruct.h  Interface.cpp  Interface.hh  Menu.cpp  Menu.hh  Room.cpp  Room.hh  main.cpp  sfml_client_final.vcxproj  sfml_client_final.vcxproj.filters  stdafx.h
sfml_client_final/sfml_client_final/sfml_client_final/network/: INetwork.hpp  NetworkManager.hpp  UNetwork.cpp  UNetwork.hpp  WNetwork.cpp  client.cpp
